--- a/html-templates/template-check.html
+++ b/html-templates/template-check.html
@@ -6,7 +6,7 @@
         pre { /* I use <pre> instead of labels w/o for attribute */
           margin: 0;
           padding:0;
-          font-family:"Roboto Mono", monospace;
+          font-family:inherit;
         }
         .checkMark {
           fill:none;
