--- a/html-templates/template-number.html
+++ b/html-templates/template-number.html
@@ -10,147 +10,207 @@
           font-optical-sizing:inherit;
           font-palette:inherit;
         }
-        svg {
+        #buttons {
           pointer-events:none;
           height:1.375rem;
           width: auto;
-          margin-left:-1rem;   /* offsets width */
+          margin-left:-1rem; /* offsets width */
       /* position:relative;
           left: -1rem;
           margin-right:-1rem; */
         }
-        path {
-          fill:none;
-          stroke:#111;
-          stroke-linecap:round;
+        rect {
+          stroke:none;
         }
         rect, use {
-          stroke:none;
           width: 1rem;
           height:1.375rem;  /* 22px */
         }
-        rect.idle  { fill:#E7E7E7 }
-        rect.hover { fill:#EEE }
+        rect.spin  { fill:#EEE }
         .events {
           pointer-events:visible;
           fill:none;
-          height:0.6875rem; /* 11px */
+          height:11px; /* 11px */
         }
-        .arrow-idle {
-          stroke:#333;
-          stroke-width:0.0625rem;
+        .black     { fill:#000; }
+        .darkgray  { fill:#333; }
+        .gray      { fill:#666; }
+        .lightgray { fill:#888; }
+        .idle {
+          fill:none;
+          stroke:#444;
         }
         .arrow-hover {
-          stroke:#111;
-          stroke-width:0.0625rem;
+          fill:  #555;
+          stroke:#555;
         }
-        #controls { visibility:hidden } /* initial state*/
-        text      { visibility:hidden } /* permanent state*/
+        .arrow-active {
+          stroke:#333;
+        }
+        .arrow-er {
+          fill:  #000;
+          stroke:#000;
+        }
+        .one80 {
+            transform-origin:8.5px 11px;
+            transform:rotate(180deg);
+        }
+
+        .confirm {
+          fill:none;
+          stroke-width:1.25px;
+          stroke-linecap:round;
+          stroke-linejoin:round;
+        }
+        .onePoint5     { stroke-width:1.5px; }
+        .ok-disabled   { stroke:#999}
+        .okc-idle      { stroke:#666 }
+        .okc-hover     { stroke:#444 }
+        .ok-active     { stroke:#090;  filter:blur(0.5px);}
+        .cancel-active { stroke:#A00;  filter:blur(0.4px);}
+
+        /* visibility, vs display, lets #controls capture
+           events, and it's less prone to screen glitches.
+           It requires the negative margin set above.      */
+        #controls { visibility:hidden }
       </style>
       <!--------------------------------------------------------------->
       <div style="display:flex; align-items:center;">
         <input part="input" id="input" type="text" inputmode="numeric"/>
-        <svg part="buttons" viewbox="0 0 16 22">
+        <svg id="buttons" part="buttons" viewbox="0 0 16 22">
           <defs>
-            <!-- spinner buttons: up and down -->
+            <!-- spinner buttons -->
+            <rect id="bg" fill="#EEE"/>
+            <rect id="rect1" style="width:5px; height:1px;" x="6"/>
+            <rect id="rect2" style="width:5px; height:2px;" x="6"/>
+            <path id="idle-up"   class="idle" d="M4.5, 9.5 L8.5, 4 12.5, 9.5"/>
+            <path id="idle-down" class="idle" d="M4.5,12.5 L8.5,18 12.5,12.5"/>
+            <path id="active-up" d="M4,9.5 L8.5,4 13,9.5 H10.5 V10.5 H6.5 V9.5Z"/>
+
             <g id="spinner-idle">
-              <rect class="idle"/>
-              <path class="arrow-idle"  d="M4.5, 9 L8.5, 4 12.5, 9"/>
-              <path class="arrow-idle"  d="M4.5,13 L8.5,18 12.5,13"/>
+              <use href="#bg"/>
+              <use href="#idle-up"/>
+              <use href="#idle-down"/>
             </g>
-            <!---------------------->
+            <g id="spinner-key-up">
+              <use href="#bg"/>
+              <use href="#idle-up" y="-1"/>
+              <use href="#idle-down"/>
+            </g>
+            <g id="spinner-key-down">
+              <use href="#bg"/>
+              <use href="#idle-up"/>
+              <use href="#idle-down" y="1"/>
+            </g>
             <g id="spinner-hover-up">
-              <rect class="hover"/>
-              <path class="arrow-hover" d="M4.5, 8 L8.5, 3 12.5, 8"/>
-              <path class="arrow-idle"  d="M4.5,13 L8.5,18 12.5,13"/>
+              <use href="#bg"/>
+              <path class="arrow-hover" d="M4,9.5 L8.5,4 13,9.5Z
+                                           M6.5,12.5 H10.5 V17.5 H6.5Z"/>
             </g>
             <g id="spinner-active-up">
-              <rect class="hover"/>
-              <path class="arrow-hover" d="M4.5, 7 L8.5, 2 12.5, 8"/>
-              <path class="arrow-idle"  d="M4.5,13 L8.5,18 12.5,13"/>
+              <use href="#bg"/>
+              <g transform="translate(0 -1)" class="darkgray">
+                <use href="#active-up" class="arrow-active"/>
+                <use href="#rect2" y="12"/>
+                <use href="#rect2" y="15"/>
+                <use href="#rect1" y="18"/>
+              </g>
             </g>
             <g id="spinner-active-upper">
-              <rect class="hover"/>
-              <path class="arrow-hover" d="M4.5, 6 L8.5, 1 12.5, 8"/>
-              <path class="arrow-idle"  d="M4.5,13 L8.5,18 12.5,13"/>
+              <use href="#bg"/>
+              <g transform="translate(0 -2)">
+                <use href="#active-up" class="arrow-er"/>
+                <use href="#rect2" class="darkgray"  y="12"/>
+                <use href="#rect2" class="gray"      y="15"/>
+                <use href="#rect2" class="lightgray" y="18"/>
+              </g>
             </g>
-            <!------------------------>
-            <g id="spinner-hover-down">
-              <rect class="hover"/>
-              <path class="arrow-idle"  d="M4.5, 9 L8.5, 4 12.5, 9"/>
-              <path class="arrow-hover" d="M4.5,14 L8.5,19 12.5,14"/>
-            </g>
-            <g id="spinner-active-down">
-              <rect class="hover"/>
-              <path class="arrow-idle"  d="M4.5, 9 L8.5, 4 12.5, 9"/>
-              <path class="arrow-hover" d="M4.5,15 L8.5,20 12.5,15"/>
-            </g>
-            <g id="spinner-active-downer">
-              <rect class="hover"/>
-              <path class="arrow-idle"  d="M4.5, 9 L8.5, 4 12.5, 9"/>
-              <path class="arrow-hover" d="M4.5,16 L8.5,21 12.5,16"/>
-            </g>
+            <use id="spinner-hover-down"    href="#spinner-hover-up"     class="one80"/>
+            <use id="spinner-active-down"   href="#spinner-active-up"    class="one80"/>
+            <use id="spinner-active-downer" href="#spinner-active-upper" class="one80"/>
+
             <!-- confirm buttons: ok and cancel -->
+            <rect id="confirm-rect" style="width:15px; height:11px;" x="1"/>
+            <use  id="confirm-hover"  href="#confirm-rect" fill="#DDD"/>
+            <use  id="confirm-active" href="#confirm-rect" fill="#F7F7F7"/>
+            <path id="midline" d="M1,11 H16" style="stroke:#0002; stroke-width:1px;"/>
+            <path id="ok"     class="confirm" d="M6,6 L8.5,8.5 12.5,2"/>
+            <path id="cancel" class="confirm" d="M6,14 L12,20 M12,14 L6,20"/>
             <g id="confirm-idle">
-              <rect class="idle"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="black"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="black"/>
+              <use href="#bg"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="okc-idle"/>
+              <use href="#cancel" class="okc-idle"/>
             </g>
             <g id="confirm-hover-up">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="green"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="darkred"/>
+              <use href="#bg"/>
+              <use href="#confirm-hover"/>
+              <use href="#ok"     class="okc-hover onePoint5"/>
+              <use href="#cancel" class="okc-idle"/>
             </g>
             <g id="confirm-active-up">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="green"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="darkred"/>
+              <use href="#bg"/>
+              <use href="#confirm-active"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="ok-active onePoint5"/>
+              <use href="#cancel" class="okc-idle"/>
             </g>
             <g id="confirm-hover-down">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="darkgreen"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="red"/>
+              <use href="#bg"/>
+              <use href="#confirm-hover" y="11"/>
+              <use href="#ok"     class="okc-idle"/>
+              <use href="#cancel" class="okc-hover onePoint5"/>
             </g>
             <g id="confirm-active-down">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="darkgreen"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="red"/>
+              <use href="#bg"/>
+              <use href="#confirm-active" y="11"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="okc-idle"/>
+              <use href="#cancel" class="cancel-active onePoint5"/>
             </g>
             <!-- cancel-only buttons for when ok is disabled -->
             <g id="cancel-idle">
-              <rect class="idle"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="black"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="black"/>
+              <use href="#bg"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="ok-disabled"/>
+              <use href="#cancel" class="okc-idle"/>
             </g>
             <g id="cancel-hover-up">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="darkgray"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="darkred"/>
+              <use href="#bg"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="ok-disabled"/>
+              <use href="#cancel" class="okc-idle"/>
             </g>
             <g id="cancel-active-up">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="darkgray"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="darkred"/>
+              <use href="#bg"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="ok-disabled"/>
+              <use href="#cancel" class="okc-idle"/>
             </g>
             <g id="cancel-hover-down">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="darkgray"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="red"/>
+              <use href="#bg"/>
+              <use href="#confirm-hover" y="11"/>
+              <use href="#ok"     class="ok-disabled"/>
+              <use href="#cancel" class="okc-hover onePoint5"/>
             </g>
             <g id="cancel-active-down">
-              <rect class="hover"/>
-              <path d="M6,6 L8.5,8.5 12.5,2" stroke="darkgray"/>
-              <path d="M6,13.5 L12,19.5 M12,13.5 L6,19.5" stroke="red"/>
+              <use href="#bg"/>
+              <use href="#confirm-active" y="11"/>
+              <use href="#midline"/>
+              <use href="#ok"     class="ok-disabled"/>
+              <use href="#cancel" class="cancel-active onePoint5"/>
             </g>
           </defs>
-          <!----------------------------------------------------------------->
+          <!-------------->
           <g id="controls">
             <use href="#spinner-idle"/>     <!-- initial state -->
             <polyline part="border" points="0.5,0 0.5,22"/>
           </g>
           <rect id="up"   class="events"/>  <!-- invisible event catchers  -->
           <rect id="down" class="events" y="11"/>
-          <!------------------->
+        </svg>
+        <!-------------------->
+        <svg viewBox="0 0 0 0" visibility="hidden" width="0" height="0">
           <text id="max"></text>            <!-- invisible width measurers -->
           <text id="min"></text>
           <text id="data-units"></text>
