--- a/html-templates/multi-check.html
+++ b/html-templates/multi-check.html
@@ -1,6 +1,46 @@
 <html>   <!-- <check-box> and <check-tri> template -->
   <body>
     <template id="template-check">
+      <style>
+        #check {
+          fill-opacity:0;
+        }
+        #check:hover {
+          fill-opacity:0.05;
+          fill:  #03B;
+          stroke:#019;
+        }
+        #check:active {
+          fill-opacity:1;
+          fill:white;
+          stroke:#019;
+          color: #019;
+        }
+        #default {
+          fill-opacity:0.05;
+          fill:  #777;
+          stroke:#777;
+        }
+        #box {
+          stroke-width:1px;
+          stroke:#111;
+        }
+        #mark, #default-mark {
+          fill:none;
+          stroke-width:2px;
+          stroke-linecap :round;
+          stroke-linejoin:round;
+        }
+        #data-label {
+          margin: 0;
+          padding:0;
+          font-family:inherit;
+          user-select:none;
+          -webkit-user-select:none;
+          -moz-user-select:none;
+          -ms-user-select:none;
+        }
+      </style>
       <svg id="shapes" part="shapes" viewbox="0 0 18 15" width="18" height="15">
         <defs> <!-- this template doesn't define #false -->
           <rect id="box" x="0.5" y="1.5" width="13" height="13" rx="2" ry="2"/>
@@ -13,7 +53,7 @@
           <use href="#box" part="default-box"/>
           <use href="#false" id="default-mark" part="default-mark"/>
         </g>
-        <g part="check">
+        <g id="check" part="check">
           <use href="#box" part="box"/>
           <use href="#false" id="mark" part="mark"/>
         </g>
