--- a/html-templates/state-btn.html
+++ b/html-templates/state-btn.html
@@ -1,12 +1,7 @@
 <html>
-  <body>
-    <!-- <state-button> template -->
+  <body> <!-- <state-btn> template for playback -->
     <template id="template-button">
-      <style>
-        :host { --square:calc(1rem + var(--9-16ths)) }
-        svg   { width:var(--square); height:var(--square); }
-      </style>
-      <svg viewbox="0 0 25 25">
+      <svg viewbox="0 0 25 25" width="25" height="25">
         <defs>
           <!-- 3 images for #play button -->
           <path id="btn-play"   d="M3,2 L22,12.5 3,23 Z"/>
