oops, templates again

--- a/html-templates/multi-check.html
+++ b/html-templates/multi-check.html
@@ -1,6 +1,6 @@
 <html>   <!-- <check-box> and <check-tri> template -->
   <body>
-    <template id="template-check">
+    <template>
       <style>
         #check {
           fill-opacity:0;
