--- a/html-templates/state-btn.html
+++ b/html-templates/state-btn.html
@@ -1,6 +1,6 @@
 <html>
   <body> <!-- <state-btn> template for playback -->
-    <template id="template-button">
+    <template>
       <svg viewbox="0 0 25 25" width="25" height="25">
         <defs>
           <!-- 3 images for #play button -->
