--- a/html-templates/input-num.html
+++ b/html-templates/input-num.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <template id="template-number"> <!-- the <number-in> template -->
+    <template> <!-- the <input-num> template -->
       <style>
         :host {
           --height:1.375rem; /* 22px */
@@ -78,7 +78,7 @@
         <input id="input"   part="input" type="text" inputmode="numeric"/>
         <svg   id="buttons" part="buttons" viewbox="0 0 16 22">
           <defs>
-            <!-- spinner buttons -->
+            <!-- spinner buttons: top = up, bot = down -->
             <rect id="bg" fill="#EEE"/>
             <rect id="rect1" style="width:5px; height:1px;" x="6"/>
             <rect id="rect2" style="width:5px; height:2px;" x="6"/>
@@ -128,7 +128,7 @@
             <use id="spinner-active-bot" href="#spinner-active-top" class="one80"/>
             <use id="spinner-spin-bot"   href="#spinner-spin-top"   class="one80"/>
 
-            <!-- confirm buttons: ok and cancel -->
+            <!-- confirm buttons: top = ok, bot = cancel -->
             <rect id="confirm-rect" style="width:15px; height:11px;" x="1"/>
             <use  id="confirm-hover"  href="#confirm-rect" fill="#DDD"/>
             <use  id="confirm-active" href="#confirm-rect" fill="#F7F7F7"/>
@@ -165,38 +165,6 @@
               <use href="#confirm-active" y="11"/>
               <use href="#midline"/>
               <use href="#ok"     class="okc-idle"/>
-              <use href="#cancel" class="cancel-active onePoint5"/>
-            </g>
-            <!-- cancel-only buttons for when ok is disabled -->
-            <g id="cancel-idle">
-              <use href="#bg"/>
-              <use href="#midline"/>
-              <use href="#ok"     class="ok-disabled"/>
-              <use href="#cancel" class="okc-idle"/>
-            </g>
-            <g id="cancel-hover-top">
-              <use href="#bg"/>
-              <use href="#midline"/>
-              <use href="#ok"     class="ok-disabled"/>
-              <use href="#cancel" class="okc-idle"/>
-            </g>
-            <g id="cancel-active-top">
-              <use href="#bg"/>
-              <use href="#midline"/>
-              <use href="#ok"     class="ok-disabled"/>
-              <use href="#cancel" class="okc-idle"/>
-            </g>
-            <g id="cancel-hover-bot">
-              <use href="#bg"/>
-              <use href="#confirm-hover" y="11"/>
-              <use href="#ok"     class="ok-disabled"/>
-              <use href="#cancel" class="okc-hover onePoint5"/>
-            </g>
-            <g id="cancel-active-bot">
-              <use href="#bg"/>
-              <use href="#confirm-active" y="11"/>
-              <use href="#midline"/>
-              <use href="#ok"     class="ok-disabled"/>
               <use href="#cancel" class="cancel-active onePoint5"/>
             </g>
           </defs>
