--- a/html-templates/multi-check.html
+++ b/html-templates/multi-check.html
@@ -31,7 +31,7 @@
           stroke-linecap :round;
           stroke-linejoin:round;
         }
-        #data-label {
+        #label {
           margin: 0;
           padding:0;
           font-family:inherit;
@@ -58,7 +58,7 @@
           <use href="#false" id="mark" part="mark"/>
         </g>
       </svg>
-      <pre id="data-label" part="label"></pre>
+      <pre id="label" part="label"></pre>
     </template>
   </body>
 </html>
