--- a/html-templates/multi-check.html
+++ b/html-templates/multi-check.html
@@ -1,61 +1,22 @@
 <html>   <!-- <check-box> and <check-tri> template -->
   <body>
     <template>
-      <style>
-        #check {
-          fill-opacity:0;
-        }
-        #check:hover {
-          fill-opacity:0.05;
-          fill:  #03B;
-          stroke:#019;
-        }
-        #check:active {
-          fill-opacity:1;
-          fill:white;
-          stroke:#019;
-          color: #019;
-        }
-        #default {
-          fill-opacity:0.05;
-          fill:  #777;
-          stroke:#777;
-        }
-        #box {
-          stroke-width:1px;
-          stroke:#111;
-        }
-        #mark, #default-mark {
-          fill:none;
-          stroke-width:2px;
-          stroke-linecap :round;
-          stroke-linejoin:round;
-        }
-        #label {
-          margin: 0;
-          padding:0;
-          font-family:inherit;
-          user-select:none;
-          -webkit-user-select:none;
-          -moz-user-select:none;
-          -ms-user-select:none;
-        }
-      </style>
-      <svg id="shapes" part="shapes" viewbox="0 0 18 15" width="18" height="15">
+      <svg id="shapes" part="shapes" viewbox="0 0 18 15">
         <defs> <!-- this template doesn't define #false -->
-          <rect id="box" x="0.5" y="1.5" width="13" height="13" rx="2" ry="2"/>
           <path id="true" d="M3.5,8.5 L6,11 10,4.5"/>
           <path id="null" d="M4,8 H10"/>
         </defs>
         <!-- #mark and #default-mark must be refer to #false -->
         <!-- #default hidden because default is !showDefault -->
         <g id="default" part="default" pointer-events="none" visibility="hidden">
-          <use href="#box" part="default-box"/>
-          <use href="#false" id="default-mark" part="default-mark"/>
+          <rect part="default-box"  x="0.5" y="1.5" width="13"
+                                   rx="2"  ry="2"  height="13" />
+          <use id="default-mark" part="default-mark" href="#false"/>
         </g>
         <g id="check" part="check">
-          <use href="#box" part="box"/>
-          <use href="#false" id="mark" part="mark"/>
+          <rect   id="box"  x="0.5" y="1.5" width="13"
+                part="box" rx="2"  ry="2"  height="13" />
+          <use id="use" part="mark" href="#false"/>
         </g>
       </svg>
       <pre id="label" part="label"></pre>
